--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
+@import "./base";
+
+@import "tailwindcss/components";
+@import "./components";
+
+@import "tailwindcss/utilities";
