fix border gallery

--- a/styles/base.css
+++ b/styles/base.css
@@ -30,4 +30,8 @@
   img {
     @apply inline-block;
   }
+
+  .react-photo-gallery--gallery div img, video {
+    @apply box-content border-[1px] border-white;
+  }
 }
